--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,3 @@
+dbURI = mongodb+srv://quickDel:quickdel123@cluster0.thtx0uu.mongodb.net/quickdelMern?retryWrites=true&w=majority
+
 BASE_URL = http://localhost:3000
